@@ -179,7 +179,8 @@ public class ConsecutiveLiteralAppends extends AbstractRule {
     private int processAdditive(Object data, int concurrentCount,
                                 SimpleNode sn, SimpleNode rootNode) {
         ASTAdditiveExpression additive = sn.getFirstChildOfType(ASTAdditiveExpression.class);
-        if (additive == null) {
+        // The additive expression must of be type String to count
+        if (additive == null || (additive.getType() != null && !TypeHelper.isA(additive, String.class))) {
             return 0;
         }
         int count = concurrentCount;
